--- a/css/reg.css
+++ b/css/reg.css
@@ -31,7 +31,7 @@ display:block;
     border-bottom: 2px solid transparent;
 }
 .form-control{
-    width: 60%;
+    /* width: 60%; */
 }
 footer{
 position:relative; 
