--- a/css/addbudget.css
+++ b/css/addbudget.css
@@ -1,3 +1,4 @@
+/*
 *,
 *:before,
 *:after{
@@ -5,10 +6,15 @@
     margin: 0;
     box-sizing: border-box;
 }
+*/
+
+/*
 body{
     background-color: #dddddd;
     font-size:30px;
 }
+*/
+
 /* .popup{
     background-color: #59d434;
     width: 100%;
@@ -22,15 +28,15 @@ body{
     top: 50%;
     left: 50%;
     width: 70%;
-    height: 30%;
-    background-color: rgba(0, 0, 0, 0.5);
+    height: 40%;
+    background-color: #FFDD83;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .popup form {
-    background-color: #ffb8b8;
+    background-color: #FFDD83;
     padding: 20px;
     border-radius: 5px;
     width: 80%;
@@ -45,7 +51,7 @@ body{
 }
 
 .popup form button {
-    background-color: #007bff;
+    background-color: #FFDD83;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -61,18 +67,17 @@ body{
 }
 
 .closebutton{
-    display: block;
-    margin:0 0 auto;
     background-color: transparent;
-    font-size: 30px;
+    font-size: 350%;
     color: #ffffff;
-    background: #03549a;
+    background: #FFACAC;
     border-radius: 100%;
-    width: 40px;
-    height: 40px;
+    width: 40%;
+    height: 40%;
     border: none;
     outline: none;
     cursor: pointer;
+    padding: 0%;
 }
 .popup h2{
     margin-top: -20px;
@@ -83,15 +88,13 @@ body{
      line-height: 25px;
  }
  a{
-    display: block;
-    width: 80px;
-    height: 80px;
-    position: relative;
-    left:150px;
-    margin: auto;
-    background-color: #0f72e5;
-    border-radius: 40px;
+    position:relative;
+    margin: 0%;
+    background-color: #FFACAC;
+    border-radius: 100%;
     color: #ffffff;
     text-decoration: none;
-    padding: px 0;
+    padding: 0%;
+    left:0%;
+    right:auto;
 }
